--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
   --color-gray-light: #f2f2f9;
   --color-gray-dark: #646680;
 
+  --sucess-color: #2ecc71;
+  --error-color: #dc143c;
+
   --linear-gradient: linear-gradient(to right bottom, #48c6ef 0%, #6f86d6 100%);
 }
 
@@ -127,8 +130,22 @@ a {
 }
 .form-control input,
 textarea {
+  border: 2px solid #6f86d6;
+  border-radius: 4px;
   display: block;
   width: 100%;
+  padding: 10px;
+  font-size: 14px;
+}
+.form-control input:focus {
+  outline: none;
+  border-color: var(--color-gray-dark);
+}
+.form-control.error input {
+  border-color: var(--error-color);
+}
+.form-control.success input {
+  border-color: var(--sucess-color);
 }
 /* Footer */
 .footer-list {
@@ -157,4 +174,12 @@ textarea {
   background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: grayscale(20%);
+}
+.form-control small {
+  color: crimson;
+  font-size: 1rem;
+  visibility: hidden;
+}
+.form-control.error small {
+  visibility: visible;
 }
